<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kiti</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_basicActivity_mainPage">MainTaskPage</string>
    <string name="taobao">淘宝</string>
    <string name="tianmao">天猫</string>
    <string name="jingdong">京东</string>
    <string name="stopTask">停止任务</string>
    <string name="changeAccount">切换账号</string>
    <string name="quit">退出</string>
    <string name="screen">截屏</string>
    <string name="userName">用户名</string>

</resources>
