<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tencent.mm.basicActivity.mainPage.MainTaskActivity" >
    
    <TextView 
        android:id="@+id/mainpage_usernameicon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/userName"
       />
    
    <TextView 
        android:id="@+id/mainpage_username"
        android:layout_toRightOf="@id/mainpage_usernameicon"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        />
    
    <TextView 
        android:id="@+id/mainpage_notice"
        android:layout_below="@id/mainpage_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="预留用来显示任务状态"
        />
    
    <LinearLayout
        android:id="@+id/taskbutton_layout"
        android:layout_below="@id/mainpage_notice"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/taobao"
            android:background="@drawable/basicbuttonyellow"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" 
            android:layout_marginLeft="50dp"
        	android:layout_marginRight="50dp"
            android:text="@string/taobao"/>
        <Button
            android:id="@+id/tianmao"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" 
            android:layout_marginRight="50dp"
            android:background="@drawable/basicbuttonyellow"
            android:text="@string/tianmao"/>
        <Button
            android:id="@+id/jingdong"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" 
            android:layout_marginRight="50dp"
            android:background="@drawable/basicbuttonyellow"
            android:text="@string/jingdong"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/changeAccount_layout"
        android:layout_below="@id/taskbutton_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/stopTask"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
        	android:layout_marginRight="25dp" 
            android:background="@drawable/basicbuttonyellow"
            android:text="@string/stopTask"/>
        <Button
            android:id="@+id/changeAccount"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="25dp" 
            android:layout_marginRight="50dp" 
            android:background="@drawable/basicbuttonyellow"
            android:text="@string/changeAccount"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/quitAndScreen_layout"
        android:layout_below="@id/changeAccount_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2" >
    
    <Button 
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/basicbuttonyellow"
        android:text="@string/quit"
        />
    
    
    
    <Button 
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/basicbuttonyellow"
        android:text="@string/screen"
        />
    
     </LinearLayout>
    

</RelativeLayout>
